--- a/css/style.css
+++ b/css/style.css
@@ -1,77 +1,81 @@
-/* div {
+/* * {
     border: 1px solid red;
 } */
-
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap');
 
 body {
     font-family: 'Raleway', sans-serif;
 }
 
-.foto-perfil {
-    border: 2px solid lightgrey;
-    border-radius: 50%;
-    margin-top: -90px;
-    background-color: white;
-    background-size: 200px;
-    width: 150px;
-    height: 150px;
+header * {
+    font-weight: bold;
+}
+
+.logo-header {
+    margin: 0 0 0 2rem ;
+    padding: 0 !important;     
+    top: 50px;
     z-index: 1;
-    background-repeat: no-repeat;
-    background-position: bottom;
-} 
-
-.nav-desktop-penochao {
-    background-color: #237FCF;
 }
 
-.rounded-penochao {
-    border-radius: 20px;
-}
-
-.rounded-top-penochao {
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-}
-
-.rounded-bottom-penochao {
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-}
-
-.rounded-left-penochao {
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
-}
-
-.rounded-right-penochao {
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-}
-
-.bg-btn-camera {
-    background-color:rgb(26,28,219);
-}
-
-.bg-feed {
-    background-color: rgb(219,228,255);
-}
-
-.container-perfil {
-    margin-top: -65px!important;
-}
-
-.container{
-    margin: 0;
-    padding: 0;
-}
-.resultado-mantente{
-    height: 50;
-    font-size: 50px;
-}
-.resultado-visitante{
-    height: 50px;
-    font-size: 50px;
+.banner {
+    /* width: 100%; */
+    height: 500px;
+    background-image: url("../img/futebol-raiz-varzea_956x500.jpg");
+    background-size: 100vw;
     
 }
 
+.col-perfil {
+    border: 2px solid lightgrey;
+    border-radius: 20px;
+    /* padding: 0!important; */
+    height: 800px;
+}
+
+.col-feed {
+    /* border: 2px solid lightgrey; */
+    border-radius: 20px;
+    padding: 0!important;
+    height: 600px;
+    background-color: rgb(197, 226, 236);
+}
+
+.col-geral {
+    border: 2px solid lightgrey;
+    border-radius: 20px;
+    padding: 0!important;
+    height: 600px;
+}
+
+.background-perfil {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    background-image: url('../img/gramado-bkg.PNG');
+    background-position: center;
+    background-size: 300px;
+    background-repeat: no-repeat;
+    width: 300px;
+    height: 150px;
+    padding: 0;
+    margin: 0;
+}
+
+.foto-perfil {
+    border: 2px solid lightgrey;
+    /* border-radius: 50%; */
+    top: 60px;
+    left: 80px;
+    background-color: white;
+    width: 150px;
+    height: 150px;
+    z-index: 1;
+    background-image: url('../img/perfil.PNG');
+    background-repeat: no-repeat;
+    background-position: center;
+
+}
+
+.resenha {
+    border-radius: 20px;
+}
