--- a/css/style2.css
+++ b/css/style2.css
@@ -22,7 +22,7 @@ p {
     width: 50%;
 }
 
-h6 {
+.d_text1 {
     font-size:3px;
     color: black  ;
     font-family:roboto;
@@ -30,7 +30,7 @@ h6 {
     font-style: italic;
     opacity: 0.5
 }
-button {
+.d-button {
     background-color: white;
     border: 0;
     border-style: none;
