--- a/views/home.html
+++ b/views/home.html
@@ -123,12 +123,7 @@
 
           <div class="row mx-2 my-2 bg-white rounded-penochao">
             <div class="col-12">
-              <p class="text-center">Post</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Inicio parte inferior  do time line -->
+              <!-- Inicio parte inferior  do time line -->
         <div class="d-flex-in    my-3 ">
           <div class="d-flex ">
             <div class="d-flex ">
@@ -144,7 +139,7 @@
             </div>
 
             <div class=" ml-auto">
-              <button type="submit">
+              <button class="d-button" type="submit">
                 <h6 class=" text-1">Deixar de seguir </h6>
               </button>
             </div>
@@ -158,18 +153,18 @@
           <!-- Inicio imagens para curtir pagina -->
           <div class="d-flex ">
             <div>
-              <button type="submit"> <i class="fas fa-futbol ml-3 "> </i></button>
+              <button class="d-button" type="submit"> <i class="fas fa-futbol ml-3 "> </i></button>
 
 
             </div>
             <div class="flex-shrink-1 ml-2">
-              <h6>11</h6>
+              <h6 class=".d_text1">11</h6>
             </div>
             <div>
-              <button class=""> <i class="far fa-comment ml-2"> </i></button>
+              <button class="d-button"> <i class="far fa-comment ml-2"> </i></button>
             </div>
             <div class=" flex-grow-1  ml-2 ">
-              <h6>11</h6>
+              <h6 class=".d_text1">11</h6>
             </div>
             <div class="flex-shrink-1   ml-2 ">
               <h6 class="text-1"> 05/04/2020 10:30</h6>
@@ -199,6 +194,11 @@
       <!-- Fim da coluna do feed -->
 
 
+            </div>
+          </div>
+        </div>
+
+        
       <!-- Início da coluna 3 -->
       <div class="col-3 border rounded-penochao justify-content-center">
         <div class="row mt-2 justify-content-center">
