--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-div {
+/* div {
     border: 1px solid red;
-}
+} */
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap');
 
@@ -91,7 +91,3 @@ body {
         width:375px;
     }
  }
-
- @media (max-width: 575.98px) and (orientation: portrait) {
-
-}
