--- a/css/style2.css
+++ b/css/style2.css
@@ -17,7 +17,7 @@
     color: #2196f3;
     
 }
-p {
+.d-p {
     font-size: 8px;
     width: 50%;
 }
@@ -61,4 +61,12 @@ p {
     opacity: 100%;
     font-style: italic;
     opacity: 0.5
+}
+.d-border{
+    
+    border-style: solid;
+    border-width: medium;
+    border-color:#a4a4a4;
+    border-radius:20px;
+    box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.1)
 }
