--- a/views/login.html
+++ b/views/login.html
@@ -4,57 +4,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style2.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+     <!-- Google Fonts -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    
+    <title>Login - Pé no Chão</title>
 </head>
 
 <body style="font-family:'Roboto', sans-serif;">
 
-    <div class=" px-0 d-flex col-12 bg-primary justify-content-center">
         <header>
-            <div class="d-flex align-items-center  ">
-                <img src="/img/logoNovo.png" alt="Logo" width="80px" height="80px">
-            </div>
+            <header>
+                <nav class="navbar navbar-dark nav-desktop-penochao">
+                  <div class="container logo-cadastro">
+                    <div class="col-12">
+                      <a class="navbar-brand mx-0 py-0" href="#">
+                        <img src="../img/logo_75x75.png" alt="Pé no Chão, a rede social da várzea!">
+                      </a>
+                    </div>
+                  </div>
+                </nav>
+              </header>
         </header>
-    </div>
-
-    <div class="d-flex justify-content-center  align-self-center my-5">
-        <div class="d-flex d-border justify-content-center  " style="width: 300px; height:400px ;">
-            <form action="" class="d-flex-column justify-content-center  align-self-center">
-                <div class="form-group ">
-                    <div class="d-flex ml-5 ">
-                        <h1 style="font-weight:bold;color:#8b8a8a">Login</h1>
+   
+        <main>
+            <div class="container col-9 col-sm-8 col-md-5 col-lg-4 justify-content-center ">
+              <div class=" d-flex my-2 justify-content-center ">
+                <div class="form-cadastro my-4 ">
+                   <h1>Login</h1>
+                  <div class="alinhamento">
+                    <form>
+                      <label for="nome" >
+                        E-mail
+                      </label>
+                      <input class="" type="email">
+                      <label for="senha">
+                        Senha
+                      </label>
+                      <input type="password">
+                      <div class="column ">
+                        <div>
+                         <button class="btn btn-primary w-50" type="submit"> Entrar</button>
+                        </div>
+                        <div>
+                          <a class="btn btn-outline-primary w-50 btn-sm  my-1 " href=""> Cadastre-se </a>
+                        </div>
+                        <div class="my-3">
+                            <a href=""> Esqueceu a conta? </a>
+                        </div>
+                        </div>
+                    </form>
                     </div>
-
-
                 </div>
-                <div class="form-group ">
-                    
-                    <input type="email" class="form-control  " id="email" placeholder="Seu email">
+              </div>  
+            </div>
+          </main>
 
-                </div>
-                <div class="form-group ">
-
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-                </div>
-                <div class="form-group colunm justify-content-center ml-3">
-                    <div class="d-flex ml-5 ">
-                        <button type="submit" class="btn btn-primary ">Entrar </button>
-                    </div>
-                    <div>
-                        <a class="btn btn-outline-primary btn-sm ml-5 my-2" href="">Cadastro</a>
-                    </div>
-                </div>
-
-            </form>
-        </div>
-    </div>
+   
 
 
 
