--- a/views/home.html
+++ b/views/home.html
@@ -61,7 +61,7 @@
     <div class="row mt-3">
 
       <!-- Início da coluna do Perfil -->
-      <div class="col-sm-3 border-penochao border-penochao-mobile rounded-penochao">
+      <div class="col-sm-3 border rounded-top-penochao rounded-bottom-penochao">
         <div class="row">
             <div class="col d-flex justify-content-center">
                 <!-- Banner Profile-->
@@ -82,34 +82,46 @@
             <div class="col">
                 <h5 class="text-center">Caio Roberto da Silva</h5>
                 <p class="text-center">Zagueiro</p>
-                <h5 class="text-center">Estatísticas</h5>
+                <!-- <h5 class="text-center">Estatísticas</h5> -->
             </div>
           </div>
-          <div class="row d-flex justify-content-center">
-            <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
-              <h1 class="text-center">10</h1>
-              <p class="text-center">PARTIDAS</p>
+          <div class="estatisticas">
+            <h5 class="text-center">
+              <a class="btn" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                Estatísticas
+              </a>
+            </h5>
+            <div class="collapse show" id="collapseExample">
+              <!-- <div class="card card-body"> -->
+                <div class="row d-flex justify-content-center">
+                  <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
+                    <h1 class="text-center">10</h1>
+                    <p class="text-center">PARTIDAS</p>
+                  </div>
+                  <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
+                    <h1 class="text-center">0</h1>
+                    <p class="text-center">GOLS</p>
+                  </div>
+                </div>
+                <div class="row d-flex justify-content-center">
+                  <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
+                    <h1 class="text-center">0</h1>
+                    <p class="text-center">ASSISTÊNCIAS</p>
+                  </div>
+                  <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
+                    <h1 class="text-center">8</h1>
+                    <p class="text-center">VITÓRIAS</p>
+                  </div>
+                </div>
+                <div class="row d-flex mb-3 justify-content-center">
+                  <div class="col mx-2 my-1 py-3 border rounded-penochao">
+                    <h1 class="text-center">80%</h1>
+                    <p class="text-center">APROVEITAMENTO</p>
+                  </div>
+                </div>
+              <!-- </div> -->
             </div>
-            <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
-              <h1 class="text-center">0</h1>
-              <p class="text-center">GOLS</p>
-            </div>
-          </div>
-          <div class="row d-flex justify-content-center">
-            <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
-              <h1 class="text-center">0</h1>
-              <p class="text-center">ASSISTÊNCIAS</p>
-            </div>
-            <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
-              <h1 class="text-center">8</h1>
-              <p class="text-center">VITÓRIAS</p>
-            </div>
-          </div>
-          <div class="row d-flex mb-3 justify-content-center">
-            <div class="col mx-2 my-1 py-3 border rounded-penochao">
-              <h1 class="text-center">80%</h1>
-              <p class="text-center">APROVEITAMENTO</p>
-            </div>
+ 
           </div>
         </div>
       </div>
