--- a/views/home.html
+++ b/views/home.html
@@ -91,7 +91,7 @@
                 Estatísticas
               </a>
             </h5>
-            <div class="collapse show" id="collapseExample">
+            <div class="collapse" id="collapseExample">
               <!-- <div class="card card-body"> -->
                 <div class="row d-flex justify-content-center">
                   <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
@@ -367,9 +367,7 @@
         </div>
 
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+ 
       </div>
       <!-- Fim da coluna 3 - Resultados -->
     </div>
