--- a/v02/peNoChao/views/login.ejs
+++ b/v02/peNoChao/views/login.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/stylesheets/style.css">
+    <link rel="stylesheet" href="../stylesheets/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
      <!-- Google Fonts -->
@@ -21,7 +21,7 @@
                   <div class="container logo-cadastro">
                     <div class="col-12">
                       <a class="navbar-brand mx-0 py-0" href="#">
-                        <img src="../public/images/logo_75x75.png" alt="Pé no Chão, a rede social da várzea!">
+                        <img src="../images/logo_75x75.png" alt="Pé no Chão, a rede social da várzea!">
                       </a>
                     </div>
                   </div>
