--- a/v02/peNoChao/views/times.ejs
+++ b/v02/peNoChao/views/times.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -28,7 +28,7 @@
             <a class="navbar-brand logo-header " href="#"> -->
         
         
-                <img class="" src="/img/logofinal.png" width="100" height="100" alt="">
+                <img class="" src="/images/logofinal.png" width="100" height="100" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -69,7 +69,7 @@
           <input class="form-control " type="search" placeholder="Pesquisar" aria-label="Search" >
           <div class="input-group-append">
             <div class="input-group-text" >
-                <img src="/img/pesquisa.png" alt="Icon Pesquisa">
+                <img src="/images/pesquisa.png" alt="Icon Pesquisa">
             </div>
           </div>
         </div>
@@ -81,7 +81,7 @@
     <div class="d-flex justify-content-center col-12 my-5" id=" "> 
         <div class="card  " id="#cabeca">
             <div class="card-header d-flex justify-content-between bg-white"  id="" >
-                <img class=" " data-toggle="collapse" data-target="#primeiro"  src="/img/logofinal.png" width="80px" height="80px" alt="">
+                <img class=" " data-toggle="collapse" data-target="#primeiro"  src="/images/logofinal.png" width="80px" height="80px" alt="">
                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#primeiro">
                 <h5 class=" pr-5"> Nome do Time</h5>  
                 </button>    
