--- a/v02/peNoChao/views/atleta.ejs
+++ b/v02/peNoChao/views/atleta.ejs
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="col d-flex justify-content-center">
                 <!-- Foto profile -->
-                <div class="foto-perfil" style="background-image: url('/image/foto-perfil.jpg');">
+                <div class="foto-perfil" style="background-image: url('/images/foto-perfil.jpg');">
                 </div>
             </div>
         </div>
@@ -258,7 +258,7 @@
 
           <!--Divi das fotos das assitências-->
           <div class="mt-5">
-            <h5 class="text-center">Assitências</h5>
+            <h5 class="text-center">Assistências</h5>
           </div>
 
           <div class="row mt-3">
