--- a/v02/peNoChao/views/partials/head.ejs
+++ b/v02/peNoChao/views/partials/head.ejs
@@ -3,6 +3,7 @@
 
 <!-- Folhas de Estilo-->
 <link rel="stylesheet" href="../stylesheets/style.css">
+<link rel="stylesheet" href="../stylesheets/style2.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 <!-- Google Fonts -->
