--- a/v02/peNoChao/views/partials/headerLogada.ejs
+++ b/v02/peNoChao/views/partials/headerLogada.ejs
@@ -2,14 +2,15 @@
   
     <nav class="navbar navbar-dark nav-desktop-penochao">
 
-      <div class="col-sm-1 px-0 voltar">
-        <a class="navbar-brand mx-0 py-0" href="#">
-          <img src="/images/voltar.png" alt="voltar" id="voltar">
-        </a>
-      </div>
-
       <div class="container px-0">
-        
+       
+       
+        <!--<div class="col-sm-1 px-0 voltar">
+          <a class="navbar-brand mx-0 py-0" href="#">
+            <img src="/images/voltar.png" alt="voltar" id="voltar">
+          </a>
+        </div>-->  
+
         <div class="col-sm-3 px-0 logo-mobile">
           <a class="navbar-brand mx-0 py-0" href="#">
             <img src="/images/logofinal.png" alt="Pé no Chão, a rede social da várzea!" id="imgLogo">
