--- a/v02/peNoChao/views/cadastro.ejs
+++ b/v02/peNoChao/views/cadastro.ejs
@@ -20,39 +20,32 @@
             <div class="col-sm-4 col-md-12 col-lg-4 form-cadastro">
               <h1>Cadastro</h1>
               <div class="alinhamento">
-                <form>
-                  <label for="nome">
-                    E-mail
-                  </label>
-                  <input type="email">
-                  <label for="senha">
-                    Senha
-                  </label>
-                  <input type="password">
-                  <label for="senhaConfirmacao">
-                    Confirmação da Senha
-                  </label>
-                  <input type="password">
-                  <label for="sexo">
-                  Sexo
-                 </label>
-                 <select name="sexo">
+                <form action="/cadastro" method="POST" >
+
+                  <label for="email">  E-mail  </label>
+                  <input type="email" id="email" name="email" >
+
+                  <label for="password"> Senha </label>
+                  <input type="password"  id="password"  name="password">
+
+                  <label for="senhaConfirmacao"> Confirmação da Senha  </label>
+                  <input type="password" id="senhaConfirmacao"  name="senhaConfirmacao">
+
+                <label for="sexo">  Sexo </label>
+                 <select name="sexo" >
                   <option value="selecione" selected>Selecione</option> 
                   <option value="feminino">Feminino</option>
                   <option value="masculino">Masculino</option>
                 </select>
-                 <label for="dataNacimento">
-                  Data de Nascimento
-                  </label>
-                 <input type="date">
-                 <label for="nomeUsuario">
-                  Nome de Usuário
-                 </label>
-                 <input type="text">
-                 <label for="posicao">
-                  Posição em Campo
-                 </label>
-                 <select name="sexo">
+
+                 <label for="dataNascimento">  Data de Nascimento </label>
+                 <input type="date" id="dataNascimento" name="dataNascimento">
+              
+                 <label for="nome">  Nome de Usuário </label>
+                 <input type="text" id="nome" name="nome"> 
+
+                 <label for="posicaoJogador"> Posição em Campo </label>
+                 <select name="posicaoJogador">
                   <option value="selecione" selected>Selecione</option> 
                   <option value="goleiro">Goleiro</option>
                   <option value="zagueiro">Zagueiro</option>
@@ -64,10 +57,9 @@
                   <option value="segundoAtacante">Segundo Atacante</option>
                   <option value="centroavante">Centroavante</option>
                 </select>
-                  <label>
-                    Estado
-                  </label for="estados-brasil">
-                  <select name="estados-brasil">
+
+                  <label for="estado" > Estado </label >
+                  <select name="estado">
                     <option value="AC">Acre</option>
                     <option value="AL">Alagoas</option>
                     <option value="AP">Amapá</option>
@@ -96,12 +88,16 @@
                     <option value="SE">Sergipe</option>
                     <option value="TO">Tocantins</option>
                   </select>
+
                   <label for="cidade">Cidade</label>
-                  <input type="text">
+                  <input type="text" id="cidade" name="cidade" >
+
                   <label for="bairro">Bairro</label>
-                  <input type="text">
-                  <label for="numeroTelefone">Número de Telefone</label>
-                  <input type="tel">
+                  <input type="text" id="bairro" name="bairro">
+
+                  <label for="telefone">Número de Telefone</label>
+                  <input type="text" id="telefone" name="telefone">
+
                   <input type="submit" id="btn-form"value="Entrar">
                 </form>
                 </div>
