--- a/v02/peNoChao/views/login.ejs
+++ b/v02/peNoChao/views/login.ejs
@@ -18,16 +18,23 @@
               <div class=" d-flex my-2 justify-content-center ">
                 <div class="form-cadastro my-4 ">
                    <h1>Login</h1>
+
+                   <% if( typeof msg !== 'undefined') {%>
+                    <div class="alert alert-warning" role="alert">
+                     <%= msg %>
+                   </div>
+                   <% } %>
+                   
                   <div class="alinhamento">
-                    <form>
-                      <label for="nome" >
+                    <form action="/" method="post" method="POST">
+                      <label for="email" >
                         E-mail
                       </label>
-                      <input class="" type="email">
-                      <label for="senha">
+                      <input class="" type="email" id="email" name="email">
+                      <label for="password">
                         Senha
                       </label>
-                      <input type="password">
+                      <input type="password" id="password" name="password">
                       <div class="column ">
                         <div>
                          <button class="btn btn-primary w-50" type="submit"> Entrar</button>
@@ -40,8 +47,10 @@
                         </div>
                         </div>
                     </form>
+
                     </div>
                 </div>
+
               </div>  
             </div>
           </main>
