--- a/v02/peNoChao/views/atleta.ejs
+++ b/v02/peNoChao/views/atleta.ejs
@@ -91,8 +91,11 @@
               <form>
                 <div class="form-group row">
                   <div class="col-sm-12">
-                    <input type="email" class="form-control form-control-lg input-penochao-border" id="" placeholder="Descreva sua imagem">
+                    <input type="text" class="form-control form-control-lg input-penochao-border" id="" placeholder="Digite seu texto">                    
                   </div>
+                  <div class="col-sm-12">
+                  <button type="button" class="btn btn-primary">Publicar</button>
+                </div>
                 </div>
               </form>
             </div>
