--- a/v02/peNoChao/views/login.ejs
+++ b/v02/peNoChao/views/login.ejs
@@ -28,6 +28,12 @@
                          <%= msg %>
                        </div>
                        <% } %>
+
+                       <% if( typeof msg2 !== 'undefined') {%>
+                        <div class="alert alert-warning" role="alert">
+                         <%= msg2 %>
+                       </div>
+                       <% } %>
                        
                       <div class="alinhamento">
                         <form action="/" method="post" method="POST">
